<resources>
    <string name="app_name">Gatchi</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="delete_data">delete data</string>
    <string name="not_registered">Don\'t have an account?</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_registered">already registered?</string>
    <string name="select_group">select group</string>
    <string name="register_login">LOGIN</string>
    <string name="create_group">Create group</string>
    <string name="view_group">View group</string>
    <string name="my_calendar">My calendar</string>
    <string name="group_name">Group Name:</string>
    <string name="name_group_here">Name group here</string>
    <string name="find_date">Find Date</string>
    <string name="group_id">Group ID</string>
    <string name="mainActivityHint">Select a group and click VIEW GROUP to find a date to meet up</string>
    <string name="viewCalendarHint">Use the buttons above to mark all of the days you are busy</string>
    <string name="question_mark">\?</string>
</resources>
