<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    tools:context=".Login">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="127dp"
            android:layout_marginTop="100dp"
            app:srcCompat="@drawable/logo"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="210dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/username"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="210dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:background="#FFFFFF"
            android:drawableLeft="@drawable/password"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="40dp"
            android:textSize="22sp"
            android:background="#61F5B3DA"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="17sp"
                    android:text="@string/not_registered" />

                <TextView
                    android:id="@+id/textview_register"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:textStyle="bold"
                    android:textColor="#5C5F68"
                    android:textSize="17sp"
                    android:text="@string/register" />

        </LinearLayout>


</LinearLayout>